--- a/fixture/build.gradle
+++ b/fixture/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin'
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    testImplementation 'junit:junit:4.12'
+    testImplementation "com.google.truth:truth:1.0"
 }
 
 sourceCompatibility = "7"
