Refactor public API from Fixture Library

--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mgalhardo.fixture">
+    package="com.marcellogalhardo.fixture">
 
     <application
         android:allowBackup="true"
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.mgalhardo.fixture.MainActivity">
+        <activity android:name="com.marcellogalhardo.fixture.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
