--- a/kotlin-fixture/build.gradle
+++ b/kotlin-fixture/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
 apply plugin: 'maven'
+apply plugin: 'jacoco'
 
 group = 'com.github.marcellogalhardo'
 
@@ -9,6 +10,13 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     testImplementation 'junit:junit:4.12'
     testImplementation "com.google.truth:truth:1.0"
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled false
+    }
 }
 
 sourceCompatibility = "7"
