--- a/detekt.gradle
+++ b/detekt.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'io.gitlab.arturbosch.detekt'
 
 detekt {
-    config = files("$rootDir/detekt.yml")
+    config = files("$rootDir/.detekt.yml")
     filters = ".*build.*,.*/resources/.*,.*/tmp/.*"
 }
