Replace custom getKType by official Kotlin's supported typeOf method

--- a/kotlin-fixture/build.gradle
+++ b/kotlin-fixture/build.gradle
@@ -5,6 +5,18 @@ apply plugin: 'jacoco'
 
 group = 'com.github.marcellogalhardo'
 
+compileKotlin {
+    kotlinOptions {
+        freeCompilerArgs += '-Xuse-experimental=kotlin.Experimental'
+    }
+}
+
+compileTestKotlin {
+    kotlinOptions {
+        freeCompilerArgs += '-Xuse-experimental=kotlin.Experimental'
+    }
+}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
